temp/spring_api_results.log
  File "<string>", line 1
    import sqlite3; conn = sqlite3.connect('projects/sampleSrc/metadata.db'); cursor = conn.cursor(); cursor.execute('SELECT component_type, COUNT(*) as count FROM components WHERE component_type IN ("API_ENTRY", "FRONTEND_API") GROUP BY component_type'); results = cursor.fetchall(); print('Spring API 진입점 분석 결과:'); for comp_type, count in results: print(f'  {comp_type}: {count}개'); cursor.execute('SELECT relationship_type, COUNT(*) as count FROM relationships WHERE relationship_type = "CALL_API_F2B" GROUP BY relationship_type'); results = cursor.fetchall(); print('\\nAPI 호출 관계:'); for rel_type, count in results: print(f'  {rel_type}: {count}개'); conn.close()
                                                                                                                                                                                                                                                                                                                             ^^^
SyntaxError: invalid syntax
